added working registering and logging